--- a/index.html
+++ b/index.html
@@ -12,35 +12,26 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 
-<body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#" data-activates="slide-out" id="contactSideBar">Contact</a></li>
-      </ul>
+<body class="grey lighten-3">
+  <div class="container">
+    <div class="section">
 
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h3>Wes Bubeck</h3>
+          <h5 class="light">Full Stack Web Developer</h5>
+          <br>
+        </div>
+      </div>
+
     </div>
-  </nav>
+  </div>
+  
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">Digital Revelation Media</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">A Web Development firm that provides Website Design, Online Reputation Management, Digital Branding and Search
-            Engine Optimization</h5>
-        </div>
-        <div class="row center">
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
-        <br><br>
-
       </div>
     </div>
     <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
@@ -50,60 +41,19 @@
   <div class="container">
     <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">devices_other</i></h2>
-            <h5 class="center">Web Develoment</h5>
+      <br>
+        <div class="profile-image center">
+          <img class="circle responsive-img z-depth-4" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03" alt="Wes Bubeck Profile Photo">
+          <ul>
+            <li><div class="profIndex">Name</div><div class="profValue"></div>Wes Bubeck</li>
+            <li><div class="profIndex">Title</div><div class="profValue"></div>Full Stack Web Devoloper</li>
+            <li><div class="profIndex">Location</div><div class="profValue"></div>Raleigh, NC</li>
+            <li><div class="profIndex">Contact</div><div class="profValue"></div>wesbubeck20@gmail.com | 919.948.9480</li>
+          </ul>
+        </div>   
+        <br>
 
-            <p class="light">The average affluent adult spends about 50 hours a week online. We build fast resposive Websites that will attract
-              and convert your target customers. Our websites not only have elite styling and fucntionality, we design innovative functions to boost
-              your companies efficiency and productivity</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Digital Branding</h5>
-
-            <p class="light">A Brand conveys quality, credibility and an experience. In an fast changing space, our team out works our peers at staying
-              the cutting edge of trends. We will give your brand the digital image it deserves and a foot print that will eclipse your competition.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">important_devices</i></h2>
-            <h5 class="center">SEO - Online Reputation</h5>
-
-            <p class="light">SEO and Online Reputation matters, and the strategy is more important than ever. It’s an essential component to successful digital marketing
-              efforts, and it can be the difference between attracting tons of website traffic and getting lost among the billions of other sites on
-              the Internet.</p>
-          </div>
-        </div>
-      </div>
-      <!--Side navBar-->
-      <ul id="slide-out" class="side-nav">
-        <li>
-          <div class="user-view">
-            <div class="background">
-              <img src="images/office.jpg">
-            </div>
-            <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
-            <a href="#!name"><span class="white-text name">Digital Revelation Media</span></a>
-            <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-          </div>
-        </li>
-        <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-        <li><a href="#!">Second Link</a></li>
-        <li>
-          <div class="divider"></div>
-        </li>
-        <li><a class="subheader">Subheader</a></li>
-        <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-      </ul>
+      
 
       <!--More Buttons with modals1-->
       <div class="row">
