--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </div>
   </div>
-  
+
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -40,74 +40,53 @@
 
   <div class="container">
     <div class="section">
-
       <br>
-        <div class="profile-image center">
-          <img class="circle responsive-img z-depth-4" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03" alt="Wes Bubeck Profile Photo">
-          <ul>
-            <li><div class="profIndex">Name</div><div class="profValue"></div>Wes Bubeck</li>
-            <li><div class="profIndex">Title</div><div class="profValue"></div>Full Stack Web Devoloper</li>
-            <li><div class="profIndex">Location</div><div class="profValue"></div>Raleigh, NC</li>
-            <li><div class="profIndex">Contact</div><div class="profValue"></div>wesbubeck20@gmail.com | 919.948.9480</li>
-          </ul>
-        </div>   
-        <br>
-
-      
-
-      <!--More Buttons with modals1-->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="row center">
-            <a id="download-button" class="btn waves-effect waves-light teal lighten-1 modal-trigger" href="#modal1">More</a>
+      <div class="profile-image center">
+        <img class="circle responsive-img z-depth-4" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03"
+          alt="Wes Bubeck Profile Photo">
+        <br><br>
+        <div class="row">
+          <div class="col m6 hide-on-small-only">
+            <h5 class="light right-align">Name |</h5>
           </div>
-          <!-- Modal 1 Structure -->
-          <div id="modal1" class="modal">
-            <div class="modal-content">
-              <h4>Modal Header</h4>
-              <p>A bunch of text</p>
-            </div>
-            <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div>
-          </div>
-
-        </div>
-        <!--More Buttons with modals 2-->
-        <div class="col s12 m4">
-          <div class="row center">
-            <a id="download-button" class="btn waves-effect waves-light teal lighten-1 modal-trigger" href="#modal2">More</a>
-          </div>
-          <!-- Modal 2 Structure -->
-          <div id="modal2" class="modal">
-            <div class="modal-content">
-              <h4>Modal Header</h4>
-              <p>A bunch of text</p>
-            </div>
-            <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div>
+          <div class="col s12 m6">
+            <h5 class="left-align">Wes Bubeck</h5>
           </div>
         </div>
-        <!--More Buttons with modals 3-->
-        <div class="col s12 m4">
-          <div class="row center">
-            <a id="download-button" class="btn waves-effect waves-light teal lighten-1 modal-trigger" href="#modal3">More</a>
+        <div class="row">
+          <div class="col m6 hide-on-small-only">
+            <h5 class="light right-align">Title |</h5>
           </div>
-          <!-- Modal Structure -->
-          <div id="modal3" class="modal">
-            <div class="modal-content">
-              <h4>Modal Header</h4>
-              <p>A bunch of text</p>
-            </div>
-            <div class="modal-footer">
-              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div>
+          <div class="col s12 m6">
+            <h5 class="left-align">Full Stack Web Developer</h5>
           </div>
-
+        </div>
+        <div class="row">
+          <div class="col m6 hide-on-small-only">
+            <h5 class="light right-align">Location |</h5>
+          </div>
+          <div class="col s12 m6">
+            <h5 class="left-align">Raleigh, NC</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m6 hide-on-small-only">
+            <h5 class="light right-align">Email |</h5>
+          </div>
+          <div class="col s12 m6">
+            <h5 class="left-align">wesbubeck20@gmail.com</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m6 hide-on-small-only">
+            <h5 class="light right-align">Phone Number |</h5>
+          </div>
+          <div class="col s12 m6">
+            <h5 class="left-align">919.948.9480</h5>
+          </div>
         </div>
       </div>
-
+      <br>
     </div>
   </div>
 
@@ -137,6 +116,45 @@
             sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
             primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
         </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <br>
+        <h4 class="center-align light">Technologies</h4>
+          <div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/nodejs-icon.svg"><h5 class="center-align">Node.js</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/react.svg"><h5 class="center-align">React</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/sequelize.svg"><h5 class="center-align">Sequelize</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/npm.svg"><h5 class="center-align">NPM</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/mysql.svg"><h5 class="center-align">MySQL</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/css-3.svg"><h5 class="center-align">CSS 3</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/bash.svg"><h5 class="center-align">Bash</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/mongodb.svg"><h5 class="center-align">MongoDB</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/materializecss.svg"><h5 class="center-align">Materialize CSS</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/bootstrap.svg"><h5 class="center-align">Bootstrap</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/html-5.svg"><h5 class="center-align">HTML 5</h5></a>
+   <a class="carousel-item" href="#one!"><img src="logos/github-icon.svg"><h5 class="center-align">GitHub</h5></a>
+  </div>
       </div>
 
     </div>
