building side nac

--- a/index.html
+++ b/index.html
@@ -13,18 +13,38 @@
 </head>
 
 <body class="grey lighten-3">
+
+
+
   <div class="container">
     <div class="section">
-
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h3>Wes Bubeck</h3>
-          <h5 class="light">Full Stack Web Developer</h5>
+        <div class="col s12">
+                <ul id="slide-out" class="side-nav">
+        <li>
+          <div class="user-view">
+            <div class="background">
+              <img src="images/office.jpg">
+            </div>
+            <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
+            <a href="#!name"><span class="white-text name">John Doe</span></a>
+            <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+          </div>
+        </li>
+        <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+        <li><a href="#!">Second Link</a></li>
+        <li>
+          <div class="divider"></div>
+        </li>
+        <li><a class="subheader">Subheader</a></li>
+        <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+      </ul>
+      <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+          <h3 class="center-align">Wes Bubeck</h3>
+          <h5 class="light center-align">Full Stack Web Developer</h5>
           <br>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -139,22 +159,27 @@
       <div class="row">
         <br>
         <h4 class="center-align light">Technologies</h4>
-          <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/nodejs-icon.svg"><h5 class="center-align">Node.js</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/react.svg"><h5 class="center-align">React</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/sequelize.svg"><h5 class="center-align">Sequelize</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/npm.svg"><h5 class="center-align">NPM</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/mysql.svg"><h5 class="center-align">MySQL</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/css-3.svg"><h5 class="center-align">CSS 3</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/bash.svg"><h5 class="center-align">Bash</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/mongodb.svg"><h5 class="center-align">MongoDB</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/materializecss.svg"><h5 class="center-align">Materialize CSS</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/bootstrap.svg"><h5 class="center-align">Bootstrap</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/html-5.svg"><h5 class="center-align">HTML 5</h5></a>
-   <a class="carousel-item" href="#one!"><img src="logos/github-icon.svg"><h5 class="center-align">GitHub</h5></a>
-  </div>
+        <div class="carousel">
+          <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/nodejs-icon.svg"><h5 class="center-align">Node.js</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/react.svg"><h5 class="center-align">React</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/sequelize.svg"><h5 class="center-align">Sequelize</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/npm.svg"><h5 class="center-align">NPM</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/mysql.svg"><h5 class="center-align">MySQL</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/css-3.svg"><h5 class="center-align">CSS 3</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/bash.svg"><h5 class="center-align">Bash</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/mongodb.svg"><h5 class="center-align">MongoDB</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/materializecss.svg"><h5 class="center-align">Materialize CSS</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/bootstrap.svg"><h5 class="center-align">Bootstrap</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/visual-studio.svg"><h5 class="center-align">Visual Studio Code</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/express.svg"><h5 class="center-align">Express</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/html-5.svg"><h5 class="center-align">HTML 5</h5></a>
+          <a class="carousel-item" href="#one!"><img src="logos/github-icon.svg"><h5 class="center-align">GitHub</h5></a>
+        </div>
+        <br>
+        <p class="center-align light">Java Script | ES6 | Node.js | React | Sequelize | NPM | GitHub | Express | HTML 5 | Visual Code Studio | MySQL |
+          CSS 3 | MongoDB | Materialize | Bootstrap </p>
       </div>
 
     </div>
