added scroll spy

--- a/index.html
+++ b/index.html
@@ -13,226 +13,243 @@
 </head>
 
 <body class="grey lighten-3">
+  <!--this will be tge whole row the will be content and scroll spy-->
+  <div class="row">
+    <!--This is the collumn that will have all content outside of scrollspy-->
+    <div class="col s12 m9 l10">
 
-
-
-  <div class="container">
+    <!--The side Nav bar and top container-->
     <div class="section">
       <div class="row">
         <div class="col s12">
-                <ul id="slide-out" class="side-nav">
-        <li>
-          <div class="user-view">
-            <div class="background">
-              <img src="images/office.jpg">
-            </div>
-            <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
-            <a href="#!name"><span class="white-text name">John Doe</span></a>
-            <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-          </div>
-        </li>
-        <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-        <li><a href="#!">Second Link</a></li>
-        <li>
-          <div class="divider"></div>
-        </li>
-        <li><a class="subheader">Subheader</a></li>
-        <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-      </ul>
-      <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul id="slide-out" class="side-nav">
+            <li>
+              <div class="user-view">
+                <div class="background light-blue darken-2">
+                  <img src="images/office.jpg">
+                </div>
+                <a href="#!user"><img class="circle" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03"></a>
+                <a href="#!name"><span class="white-text name">Wes Bubeck</span></a>
+                <a href="#!email"><span class="white-text email">wesbubeck20@gmail.com</span></a>
+              </div>
+            </li>
+            <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+            <li><a href="#!">Second Link</a></li>
+            <li>
+              <div class="divider"></div>
+            </li>
+            <li><a class="subheader">Subheader</a></li>
+            <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+          </ul>
+          <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-blue">menu</i></a>
           <h3 class="center-align">Wes Bubeck</h3>
-          <h5 class="light center-align">Full Stack Web Developer</h5>
+          <h5 class="light center-align">UIX Architect, Engineer, Designer</h5>
           <br>
         </div>
       </div>
     </div>
-  </div>
 
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-      </div>
-    </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
-  </div>
 
-
-  <div class="container">
-    <div class="section">
-      <br>
-      <div class="profile-image center">
-        <img class="circle responsive-img z-depth-4" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03"
-          alt="Wes Bubeck Profile Photo">
-        <br><br>
-        <div class="row">
-          <div class="col m6 hide-on-small-only">
-            <h5 class="light right-align">Name |</h5>
-          </div>
-          <div class="col s12 m6">
-            <h5 class="left-align">Wes Bubeck</h5>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col m6 hide-on-small-only">
-            <h5 class="light right-align">Title |</h5>
-          </div>
-          <div class="col s12 m6">
-            <h5 class="left-align">Full Stack Web Developer</h5>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col m6 hide-on-small-only">
-            <h5 class="light right-align">Location |</h5>
-          </div>
-          <div class="col s12 m6">
-            <h5 class="left-align">Raleigh, NC</h5>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col m6 hide-on-small-only">
-            <h5 class="light right-align">Email |</h5>
-          </div>
-          <div class="col s12 m6">
-            <h5 class="left-align">wesbubeck20@gmail.com</h5>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col m6 hide-on-small-only">
-            <h5 class="light right-align">Phone Number |</h5>
-          </div>
-          <div class="col s12 m6">
-            <h5 class="left-align">919.948.9480</h5>
-          </div>
+    <div id="index-banner" class="parallax-container">
+      <div class="section no-pad-bot">
+        <div class="container">
         </div>
       </div>
-      <br>
+      <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
     </div>
-  </div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Adding brief statement about company</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
-            tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a
-            sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam
-            eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum
-            sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
-            primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <br>
-        <h4 class="center-align light">Technologies</h4>
-        <div class="carousel">
-          <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/nodejs-icon.svg"><h5 class="center-align">Node.js</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/react.svg"><h5 class="center-align">React</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/sequelize.svg"><h5 class="center-align">Sequelize</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/npm.svg"><h5 class="center-align">NPM</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/mysql.svg"><h5 class="center-align">MySQL</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/css-3.svg"><h5 class="center-align">CSS 3</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/bash.svg"><h5 class="center-align">Bash</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/mongodb.svg"><h5 class="center-align">MongoDB</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/materializecss.svg"><h5 class="center-align">Materialize CSS</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/bootstrap.svg"><h5 class="center-align">Bootstrap</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/visual-studio.svg"><h5 class="center-align">Visual Studio Code</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/express.svg"><h5 class="center-align">Express</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/html-5.svg"><h5 class="center-align">HTML 5</h5></a>
-          <a class="carousel-item" href="#one!"><img src="logos/github-icon.svg"><h5 class="center-align">GitHub</h5></a>
-        </div>
-        <br>
-        <p class="center-align light">Java Script | ES6 | Node.js | React | Sequelize | NPM | GitHub | Express | HTML 5 | Visual Code Studio | MySQL |
-          CSS 3 | MongoDB | Materialize | Bootstrap </p>
-      </div>
-
-    </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <footer class="page-footer teal">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam laudantium veniam, laborum optio doloremque
-            officia! Doloribus ratione quia tempora, debitis facilis non eos sed earum magnam, ex odio molestiae.</p>
-
-
+      <div class="section">
+        <br>
+        <!--scrollspy class and id-->
+        <div class="profile-image center section scrollspy" id="profile">
+          <img class="circle responsive-img z-depth-4" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03"
+            alt="Wes Bubeck Profile Photo">
+          <br><br>
+          <div class="row">
+            <div class="col m6 hide-on-small-only">
+              <h5 class="light right-align">Name |</h5>
+            </div>
+            <div class="col s12 m6">
+              <h5 class="left-align">Wes Bubeck</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m6 hide-on-small-only">
+              <h5 class="light right-align">Title |</h5>
+            </div>
+            <div class="col s12 m6">
+              <h5 class="left-align">Full Stack Web Developer</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m6 hide-on-small-only">
+              <h5 class="light right-align">Location |</h5>
+            </div>
+            <div class="col s12 m6">
+              <h5 class="left-align">Raleigh, NC</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m6 hide-on-small-only">
+              <h5 class="light right-align">Email |</h5>
+            </div>
+            <div class="col s12 m6">
+              <h5 class="left-align">wesbubeck20@gmail.com</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col m6 hide-on-small-only">
+              <h5 class="light right-align">Phone Number |</h5>
+            </div>
+            <div class="col s12 m6">
+              <h5 class="left-align">919.948.9480</h5>
+            </div>
+          </div>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Partners</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
+        <br>
       </div>
     </div>
-    <div class="footer-copyright">
+
+
+    <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center">
+            <h5 class="header col s12 light">Adding brief statement about company</h5>
+          </div>
+        </div>
+      </div>
+      <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    </div>
+
+    <div class="container">
+      <div class="section">
+
+        <div class="row">
+          <div class="col s12 center">
+            <h3><i class="mdi-content-send brown-text"></i></h3>
+            <h4>Contact Us</h4>
+            <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
+              tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper
+              a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus.
+              Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa
+              odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum
+              ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center">
+            <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
+          </div>
+        </div>
+      </div>
+      <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    </div>
+
+    <div class="container">
+      <div class="section">
+        <!--scrollspy technology class and id-->
+        <div class="row section scrollspy" id="technology">
+          <br>
+          <h4 class="center-align light">Technologies</h4>
+          <div class="carousel">
+            <a class="carousel-item" href="#one!"><img src="logos/javascript.svg"><h5 class="center-align">JavaScript</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/es6.svg"><h5 class="center-align">JavaScript ES6</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/nodejs-icon.svg"><h5 class="center-align">Node.js</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/react.svg"><h5 class="center-align">React</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/sequelize.svg"><h5 class="center-align">Sequelize</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/npm.svg"><h5 class="center-align">NPM</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/mysql.svg"><h5 class="center-align">MySQL</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/css-3.svg"><h5 class="center-align">CSS 3</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/bash.svg"><h5 class="center-align">Bash</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/mongodb.svg"><h5 class="center-align">MongoDB</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/materializecss.svg"><h5 class="center-align">Materialize CSS</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/bootstrap.svg"><h5 class="center-align">Bootstrap</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/visual-studio.svg"><h5 class="center-align">Visual Studio Code</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/express.svg"><h5 class="center-align">Express</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/html-5.svg"><h5 class="center-align">HTML 5</h5></a>
+            <a class="carousel-item" href="#one!"><img src="logos/github-icon.svg"><h5 class="center-align">GitHub</h5></a>
+          </div>
+          <br>
+          <p class="center-align light">Java Script | ES6 | Node.js | React | Sequelize | NPM | GitHub | Express | HTML 5 | Visual Code Studio | MySQL
+            | CSS 3 | MongoDB | Materialize | Bootstrap </p>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center">
+            <h5 class="header col s12 light">More interesting info or maybe a quote</h5>
+          </div>
+        </div>
+      </div>
+      <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    </div>
+
+    <footer class="page-footer teal">
       <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="#!">Digital Revelation Media</a>
+        <!--scrollspy about me id and class-->
+        <div class="row section scrollspy" id="aboutMe">
+          <div class="col l6 s12">
+            <h5 class="white-text">About Me</h5>
+            <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam laudantium veniam, laborum optio
+              doloremque officia! Doloribus ratione quia tempora, debitis facilis non eos sed earum magnam, ex odio molestiae.</p>
+
+
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Partners</h5>
+            <ul>
+              <li><a class="white-text" href="#!">Link 1</a></li>
+              <li><a class="white-text" href="#!">Link 2</a></li>
+              <li><a class="white-text" href="#!">Link 3</a></li>
+              <li><a class="white-text" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Connect</h5>
+            <ul>
+              <li><a class="white-text" href="#!">Link 1</a></li>
+              <li><a class="white-text" href="#!">Link 2</a></li>
+              <li><a class="white-text" href="#!">Link 3</a></li>
+              <li><a class="white-text" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
+      <div class="footer-copyright">
+        <div class="container">
+          Made by <a class="brown-text text-lighten-3" href="#!">Digital Revelation Media</a>
+        </div>
+      </div>
+    </footer>
+    <!--This is the closing div collumn that will have all content outside of scrollspy-->
     </div>
-  </footer>
+    <!--scrollspy -->
+    
+      <div class="col hide-on-small-only m3 l2">
+        <ul class="section table-of-contents pinned">
+          <li><a href="#profile">profile</a></li>
+          <li><a href="#technology">technology</a></li>
+          <li><a href="#aboutMe">About Me</a></li>
+        </ul>
+      </div>
+    <!--closing div of whole wrow content and scrollspy-->
+  </div>
 
 
   <!--  Scripts-->
