added color to a dive and removed margin bottom

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
-
+<div class="row light-blue darken-2 profileRow">
     <div class="container">
       <div class="section">
         <br>
@@ -112,6 +112,7 @@
         <br>
       </div>
     </div>
+  </div>
 
 
     <div class="parallax-container valign-wrapper">
