Changed blue to darker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul id="slide-out" class="side-nav">
             <li>
               <div class="user-view">
-                <div class="background light-blue darken-2">
+                <div class="background light-blue darken-3">
                   <img src="images/office.jpg">
                 </div>
                 <a href="#!user"><img class="circle" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03"></a>
@@ -59,7 +59,7 @@
       <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
-<div class="row light-blue darken-2 profileRow">
+<div class="row light-blue darken-3 profileRow">
     <div class="container">
       <div class="section">
         <br>
@@ -70,42 +70,42 @@
           <br><br>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align">Name |</h5>
+              <h5 class="light right-align white-text">Name |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align">Wes Bubeck</h5>
+              <h5 class="left-align white-text">Wes Bubeck</h5>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align">Title |</h5>
+              <h5 class="light right-align white-text">Title |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align">Full Stack Web Developer</h5>
+              <h5 class="left-align white-text">Full Stack Web Developer</h5>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align">Location |</h5>
+              <h5 class="light right-align white-text">Location |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align">Raleigh, NC</h5>
+              <h5 class="left-align white-text">Raleigh, NC</h5>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align">Email |</h5>
+              <h5 class="light right-align white-text">Email |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align">wesbubeck20@gmail.com</h5>
+              <h5 class="left-align white-text">wesbubeck20@gmail.com</h5>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align">Phone Number |</h5>
+              <h5 class="light right-align white-text">Phone Number |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align">919.948.9480</h5>
+              <h5 class="left-align white-text">919.948.9480</h5>
             </div>
           </div>
         </div>
