--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a class="subheader">Subheader</a></li>
             <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
           </ul>
-          <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-blue">menu</i></a>
+          <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
           <h3 class="center-align">Wes Bubeck</h3>
           <h5 class="light center-align">UIX Architect, Engineer, Designer</h5>
           <br>
@@ -129,7 +129,7 @@
     <div class="container">
       <div class="section">
 
-        <div class="row">
+        <div class="row greenDiv">
           <div class="col s12 center">
             <h3><i class="mdi-content-send brown-text"></i></h3>
             <h4>Contact Us</h4>
