font color changes

--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
       </div>
       <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
     </div>
-
+<div class="row greenDiv">
     <div class="container">
       <div class="section">
 
-        <div class="row greenDiv">
+        <div class="row">
           <div class="col s12 center">
             <h3><i class="mdi-content-send brown-text"></i></h3>
-            <h4>Contact Us</h4>
-            <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
+            <h4 class="white-text">Contact Us</h4>
+            <p class="left-align light white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
               tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper
               a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus.
               Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa
@@ -143,6 +143,7 @@
         </div>
 
       </div>
+    </div>
     </div>
 
 
@@ -201,7 +202,7 @@
       <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
-    <footer class="page-footer teal">
+    <footer class="page-footer light-blue darken-3">
       <div class="container">
         <!--scrollspy about me id and class-->
         <div class="row section scrollspy" id="aboutMe">
@@ -232,7 +233,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright">
+      <div class="footer-copyright light-blue darken-4">
         <div class="container">
           Made by <a class="brown-text text-lighten-3" href="#!">Digital Revelation Media</a>
         </div>
