--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
 </head>
 
 <body class="grey lighten-3">
@@ -43,7 +44,7 @@
           </ul>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
           <h3 class="center-align">Wes Bubeck</h3>
-          <h5 class="light center-align">UIX Architect, Engineer, Designer</h5>
+          <h5 class="light center-align animated infinite bounce">UIX Architect, Engineer, Designer</h5>
           <br>
         </div>
       </div>
