--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
           </ul>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
-          <h3 class="center-align">Wes Bubeck</h3>
-          <h5 class="light center-align animated infinite bounce">UIX Architect, Engineer, Designer</h5>
+          <h3 class="center-align animated fadeInLeftBig">Wes Bubeck</h3>
+          <h5 class="light center-align animated animated fadeInRightBig">UIX Architect, Engineer, Designer</h5>
           <br>
         </div>
       </div>
