--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <div class="container">
         </div>
       </div>
-      <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+      <div class="parallax"><img src="background4.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 <div class="row light-blue darken-3 profileRow">
@@ -124,7 +124,7 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+      <div class="parallax"><img src="background.jpg" alt="Unsplashed background img 2"></div>
     </div>
 <div class="row greenDiv">
     <div class="container">
@@ -133,7 +133,7 @@
         <div class="row">
           <div class="col s12 center">
             <h3><i class="mdi-content-send brown-text"></i></h3>
-            <h4 class="white-text">Contact Us</h4>
+            <h4 class="white-text">Portfolio</h4>
             <p class="left-align light white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
               tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper
               a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus.
@@ -156,7 +156,7 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+      <div class="parallax"><img src="background5.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
     <div class="container">
@@ -200,7 +200,7 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+      <div class="parallax"><img src="background6.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
     <footer class="page-footer light-blue darken-3">
