--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
       <div class="section no-pad-bot">
         <div class="container">
           <div class="row center">
-            <h5 class="header col s12 light">Adding brief statement about company</h5>
+            <h4 class="header col s12 light">Adding brief statement about me</h4>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
     <div class="container">
       <div class="section">
 
-        <div class="row">
+        <div class="row scrollspy" id="portfolio">
           <div class="col s12 center">
             <h3><i class="mdi-content-send brown-text"></i></h3>
             <h4 class="white-text">Portfolio</h4>
@@ -246,8 +246,9 @@
     
       <div class="col hide-on-small-only m3 l2">
         <ul class="section table-of-contents pinned">
-          <li><a href="#profile">profile</a></li>
-          <li><a href="#technology">technology</a></li>
+          <li><a href="#profile">Profile</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#technology">Technology</a></li>
           <li><a href="#aboutMe">About Me</a></li>
         </ul>
       </div>
