--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="background6.jpg" alt="Unsplashed background img 3"></div>
+      <div class="parallax"><img src="churchBackground.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
     <footer class="page-footer light-blue darken-3">
